--- a/style.css
+++ b/style.css
@@ -58,11 +58,14 @@ a {
   align-items: center;
 }
 .btn {
+  display: block;
+  border: none;
   font-weight: bold;
   background: var(--my_gradient);
   color: white;
   padding: 0.25rem 1rem;
   border-radius: 0.5rem;
+  width: fit-content;
   box-shadow: 0 1.125em 1em -1em var(--clr-accent-500);
 }
 .btn:hover,
@@ -248,6 +251,65 @@ header.active .bar::after {
 }
 .card-4 {
   margin-top: 2rem;
+}
+
+/* consulatncy-section */
+
+.consulatancy-section {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.consulatancy-section .text-content {
+  width: min(35rem, 100%);
+  font-size: 1.45rem;
+}
+
+.consulatancy-section .text-content p,
+.consulatancy-section .text-content a {
+  margin-top: 1rem;
+}
+
+.consulatancy-section img {
+  width: min(37rem, 100%);
+}
+
+/* help section */
+.help-section {
+  padding: 2rem 1rem;
+  background: url(/images/bg/bg-1.jpg) top/cover;
+}
+
+.help-section .container {
+  display: block;
+  width: min(1200px, 100% - 2rem);
+  margin-inline: auto;
+}
+
+.help-section h2 {
+  text-align: center;
+  font-size: clamp(2rem, 1.0667rem + 4.2667vw, 4rem);
+}
+
+.help-section form {
+  display: grid;
+  justify-items: center;
+  gap: 1rem;
+  margin-bottom: 4rem;
+}
+
+.help-section input {
+  font-size: 2rem;
+  border-radius: 0.5rem;
+  border: none;
+  padding: 0.5rem 1rem;
+  text-align: center;
+  margin: 2rem auto;
+  width: 60%;
+}
+
+.help-section .btn {
+  font-size: 1.5rem;
 }
 
 @media (max-width: 1000px) {
