--- a/style.css
+++ b/style.css
@@ -176,19 +176,24 @@ header.active .bar::after {
 .hero img {
   width: min(30rem, 100%);
 }
+
+/* banner-1 section */
+
 .banner-1 {
   flex-wrap: wrap;
   background: url("/images/bg/bg-2.jpg") 0% 0% / cover;
   margin: 2rem auto;
 }
-.banner-1 .text-content {
+.text-content {
   width: min(35rem, 100%);
   font-size: 1.45rem;
-  text-align: center;
 }
 .banner-1 img {
   width: min(37rem, 100%);
 }
+
+/* Quote section */
+
 .quote-container {
   gap: 2rem;
   justify-content: center;
@@ -201,15 +206,18 @@ header.active .bar::after {
   padding: 1rem;
   text-align: center;
 }
+
+/* banner-2 section (Hobby section) */
+
 .banner-2 {
   background: url("/images/bg/bg-6.jpg") 0% 0% / cover;
   padding: 2rem 1rem;
 }
-.banner-2 .container {
-  width: 100%;
-}
+/* .banner-2 .container {
+  max-width: 1300px;
+} */
 .banner-2 .text-content {
-  width: min(28rem, 100%);
+  width: min(25rem, 100%);
 }
 .banner-2 .text-content h2 {
   font-size: 3rem;
@@ -264,11 +272,6 @@ header.active .bar::after {
   flex-wrap: wrap;
 }
 
-.consulatancy-section .text-content {
-  width: min(35rem, 100%);
-  font-size: 1.45rem;
-}
-
 .consulatancy-section .text-content p,
 .consulatancy-section .text-content a {
   margin-top: 1rem;
@@ -279,6 +282,7 @@ header.active .bar::after {
 }
 
 /* help section */
+
 .help-section {
   padding: 2rem 1rem;
   background: url(/images/bg/bg-1.jpg) top/cover;
@@ -328,24 +332,22 @@ header.active .bar::after {
   margin: 2rem auto;
 }
 
-.fuck {
-  margin-inline: 2rem;
-  padding-inline: 2rem;
-}
-
 .swiper-slide {
   padding: 1rem;
   background: var(--my_gradient);
   border-radius: 0.5rem;
 }
 
-.swiper-wrapper {
+.swipo {
+  margin: 0 3rem;
+  overflow: hidden;
   padding-block: 3rem;
 }
 
 .swiper-button-next,
 .swiper-button-prev {
-  z-index: 1000;
+  font-size: 3rem;
+  color: black !important;
 }
 
 /* Footer section */
@@ -423,9 +425,33 @@ footer .btn {
   border-radius: 0.5rem;
 }
 
+@media (max-width: 1185px) {
+  .banner-2 .container {
+    gap: 3rem;
+    justify-content: center;
+  }
+  .hero,
+  .container {
+    justify-content: center;
+  }
+
+  .text-content {
+    width: min(50rem, 100%);
+  }
+
+  header > .container {
+    justify-content: space-between;
+  }
+
+  .hero-content {
+    width: min(50rem, 100%);
+  }
+}
+
 @media (max-width: 1000px) {
-  .logo {
-    margin-left: 7vw;
+  .logo,
+  .hero-content {
+    margin-left: 5vw;
   }
   .hamburger-menu {
     display: flex;
@@ -473,16 +499,13 @@ footer .btn {
   header.active ul {
     flex-direction: column;
   }
-  .hero,
-  .container {
-    justify-content: center;
-  }
+
   header .container {
     justify-content: space-between;
   }
 
-  .banner-2 .container {
-    gap: 3rem;
+  .consulatancy-section .btn {
+    margin: 1rem auto;
   }
 
   .footer-wrapper {
